fix footer spacing by removing text on small mobile devices, fix blog card text being cut off, fix project card width being larger than viewport

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,3 +13,8 @@ footer {
   align-items: center;
   color: rgb(191, 191, 191);
 }
+@media (max-width: 455px) {
+  .footer-text {
+    display: none;
+  }
+}
